# CodeForLLm

./: .gitignore  README.md  gqa.py  mha.py
async_lib/: async_task_demo.py  async_task_demo_queue.py  asyncio_stream_vs_batch.py  demo_01.py
gemm/: CMakeLists.txt  example-app.cpp  gemm.py
gemm/src/: gemm_cpu.cpp  gemm_cuda.cu  sgemm_v0.cu  sgemm_v1.cu
leetcode/: 704.py
modules/: mha.py  mqa.py  page_attn.py
moe/: expert.py  test_allgather.py  test_alltoall.py
test/: test_allreduce.py  test_model_parallel.py
test/pp_tp_example/: model.py  train.py
triton_ops/: add.py  max.py  online_softmax.py  page_attn.py  perf.py  permute.py  softmax.py
triton_ops/results/: max-performance.csv  online-softmax-performance.csv  softmax-performance.csv  vector-add-performance.csv
